[tool.poetry]
name = "raiden-known-servers-metrics-sd"
version = "0.1.0"
description = ""
authors = ["Ulrich Petri <ulo@ulo.pe>"]

[tool.poetry.scripts]
raiden-known-servers-metrics-sd = "raiden_known_servers_metrics_sd.main:main"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.16.1"
structlog = "^21.1.0"
colorama = "^0.4.4"
click = "^7.1.2"
click-pathlib = "^2020.3.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py37']
